--- a/contact.html
+++ b/contact.html
@@ -10,25 +10,28 @@
         <title>Contact Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>My Contact Details</h1>
-        <h3>Kedar Sadashiv Devthankar</h3>
+    <body style="text-align: center;">
+        <h1>My Contact Details</h1><hr>
+
+        <h2>Kedar Sadashiv Devthankar</h2>
+        
         <p>At Dhanaj post Mugat Tq. Mudkhed Dist. Nanded</p>
         <p>7499375576</p>
         <p>kedardevthankar@gmail.com</p>
+        <hr>
 
         <form action="mailto:kedardevthankar@gmail.com" method="post" enctype="text/plain">
 
             <label for="">Your Name:</label>
-            <input type="text" name="Your Name:" value=""><br>
+            <input type="text" name="Your Name:" value=""><br><br>
             <label for="">Phone Number:</label>
-            <input type="number" name="Phone Number:"><br>
+            <input type="number" name="Phone Number:"><br><br>
             <label for="">E-Mail:</label>
-            <input type="email" name="E-Mail:"><br>
+            <input type="email" name="E-Mail:"><br><br>
             <label for="">Your Message:</label><br>
-            <textarea name="Your Message:" id="" rows="10" cols="30" rows="10"></textarea><br>
+            <textarea name="Your Message:" id="" rows="10" cols="30" rows="10"></textarea><br><br>
             <input type="Submit">
 
         </form>
