--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
         <title>Kedar's Personal Site</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <style>
-
-            img{
-                border-radius: 100%;
-                height: 200px;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <table cellspacing= "40px">
@@ -153,6 +146,7 @@
             <li>30 Days of Code Challenge on HackerRank (python)</li>
         </ul>
         <hr>
-        <h3><a href="contact.html">My Contact Details</a></h3>
+        <h2 class="td"><a href="contact.html">My Contact Details</a></h2>
+      
     </body>
 </html>
