--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <body>
 
         <div class="top-container">
-            <img class="top-cloud" src="images/cloud.png" alt="cloud image">
+            <img class="top-cloud" src="cloud.png" alt="cloud image">
             <h1>I'm Kedar</h1>
             <h3>Software Engineering intern</h3>
-            <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-            <img src="images/mountain.png" alt="cloud image">
+            <img class="bottom-cloud" src="cloud.png" alt="cloud image">
+            <img src="mountain.png" alt="cloud image">
         </div>
 
         <div class="middle-container">
             <div class="profile">
-              <img class="pic" src="images/kedar.jpg" alt="Kedar's Profile pic">
+              <img class="pic" src="kedar.jpg" alt="Kedar's Profile pic">
               <h2>Hello.</h2>
               <p>I'm Software engineering Intern, persuing B.tech in Electronics and Telecommunications at Shri Guru Gobind Singhji institute of Engineering and Technology, Nanded.</p>
             </div>
@@ -33,29 +33,29 @@
             <div class="skills">
               <h2>My Skills.</h2>
               <div class="skill-row">
-                <img class="comp" src="images/computer.png" alt="computer">
+                <img class="comp" src="computer.png" alt="computer">
                 <h3>Problem Solving</h3>
                 <p>The first step in solving any problem is to identify the exact issue that you are dealing with.</p>
               </div>
               <div class="skill-row">
-                <img class="chilli" src="images/cc++.png" alt="cc++">
+                <img class="chilli" src="cc++.png" alt="cc++">
                 <h3>C / C++</h3>
                 <p>C / C++ developer with experience in Object Oriented Analysis and Design (OOAD) and Object Oriented Programming (OOP).</p>
               </div>
             </div>
             <div class="skill-row">
-              <img class="comp" src="images/python.jpg" alt="python">
+              <img class="comp" src="python.jpg" alt="python">
               <h3>Python</h3>
               <p>Seeking a Python Programmer position in a reputable company that permits me to utilize my Programming skills and knowledge.</p>
             </div>
             <div class="skill-row">
-              <img class="chilli" src="images/html.jpg" alt="chillies">
+              <img class="chilli" src="html.jpg" alt="chillies">
               <h3>Html / CSS</h3>
               <p>Design and develop efficient user interfaces for web applications while continuing to learn and expand my knowledge of emerging web technologies.</p>
             </div>
           </div>
           <div class="skill-row">
-            <img class="comp" src="images/js.jpg" alt="computer">
+            <img class="comp" src="js.jpg" alt="computer">
             <h3>Javascript</h3>
             <p>Front-end developer who is comfortable working with JavaScript, HTML/CSS to deliver exceptional customer experiences.</p>
           </div>
