--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=The+Nautigal&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- Snowflakes container -->
+        <div class="snowflakes">
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+            <div class="snowflake">❄</div>
+        </div>
 
         <div class="top-container">
             <img class="top-cloud" src="cloud.png" alt="cloud image">
