Enhancement and adding features

--- a/index-me.html
+++ b/index-me.html
@@ -19,7 +19,7 @@
                 </td>
                 <td>
                     <h1>Kedar Devthankar</h1>
-                    <p>Software Engineer Intern</p>
+                    <p>Software Engineer</p>
                     <p>To work in a challenging atmosphere by exhibiting my skills with utmost sincerity and dedicate smart work for the growth of your esteemed organization along with mine.</p>
                 </td>
             </tr>
@@ -29,7 +29,7 @@
 
         <h3>Education and Qualification</h3>
         <ul>
-            <li>Pursuing B.Tech Third Year in Electronics and Telecommunication <br>
+            <li>Completes B.Tech Third Year in Electronics and Telecommunication Engineering<br>
                 At Shri Guru Gobind Singhji Institute of Engineering and Technology <br>
                 CGPA- 9.57 : SGPA- 8.97
             </li>
