--- a/index.html
+++ b/index.html
@@ -41,23 +41,22 @@
         <div class="top-container">
             <img class="top-cloud" src="cloud.png" alt="cloud image">
             <h1>I'm Kedar</h1>
-            <h3>Software Engineering intern</h3>
+            <h3>Software Engineer</h3>
             <img class="bottom-cloud" src="cloud.png" alt="cloud image">
-            <img src="mountain.png" alt="cloud image">
         </div>
 
         <div class="middle-container">
             <div class="profile">
               <img class="pic" src="kedar.jpg" alt="Kedar's Profile pic">
               <h2>Hello.</h2>
-              <p>I'm Software engineering Intern, persuing B.tech in Electronics and Telecommunications at Shri Guru Gobind Singhji institute of Engineering and Technology, Nanded.</p>
+              <p>I'm Software Engineer, Completed B.tech in Electronics and Telecommunications Engineering at Shri Guru Gobind Singhji institute of Engineering and Technology, Nanded.</p>
             </div>
             <hr>
             <div class="skills">
               <h2>My Skills.</h2>
               <div class="skill-row">
                 <img class="comp" src="computer.png" alt="computer">
-                <h3>Problem Solving</h3>
+                <h3>Problem Solver</h3>
                 <p>The first step in solving any problem is to identify the exact issue that you are dealing with.</p>
               </div>
               <div class="skill-row">
@@ -82,6 +81,16 @@
             <h3>Javascript</h3>
             <p>Front-end developer who is comfortable working with JavaScript, HTML/CSS to deliver exceptional customer experiences.</p>
           </div>
+          <div class="skill-row">
+            <img class="comp" src="cloud.png" alt="GitHub">
+            <h3>Git and GitHub</h3>
+            <p>Proficient in using Git and GitHub for version control and collaboration.</p>
+          </div>
+
+
+
+
+          
             <hr>
             <div class="contact-me">
               <h2>Get In Touch</h2>
